# NovaEngine

./: .gitignore  APPLY.txt  CMakeLists.txt  CMakeLists.txt.bak-20250808-023245  CMakeLists.txt.bak-20250808021042  Editor_ui_guard.patch  Makefile  NovaEngine_MasterPlan.docx  NovaSimple  README.md  README.txt  README_IMGUITOGGLE.md  README_steps.txt  _tmp_renderer_api.txt  fix_glm_public.diff  fix_imgui_ecs.diff  fix_lua_stringlib.diff  imgui.ini  patch.diff  patch_include_imgui_vulkan.diff
.github/logs/16834878659/: errors.txt
.github/logs/16834878659/build-logs-and-out/: CMakeCache.txt
.github/logs/16835242574/: errors.txt
.github/logs/16835749945/: errors.txt
.github/logs/16836281552/: errors.txt
.github/workflows/: build-self-heal.yml  windows-build.yml
LICENSES/: NOTICE.txt
Samples/HelloWorld3D/: scene.json
Scripts/: apply_best_fix.ps1  apply_build_fixes.ps1  apply_ci_patch.ps1  apply_editor_ui_flag.ps1  apply_endframe_helper.ps1  apply_fixes.ps1  apply_fixes_pass2.ps1  apply_headers_fix.ps1  apply_imgui_guard.ps1  apply_minimal_fixes.ps1  apply_sync_fix2.ps1  apply_sync_fix3.ps1  apply_sync_fix4.ps1  apply_ui_frame_shim.ps1  apply_vulkan_imgui_fix.ps1  apply_vulkanrenderer_header_fix.ps1  ci_fix_pass3.ps1  ci_fix_pass4.ps1  ci_fix_pass5.ps1  ci_fix_pass6.ps1  clear_nova_disable_imgui_permanently.ps1  fix_ci_errors_pass2.ps1  fix_envflag.ps1  fix_imgui_funcs.ps1  fix_includes.ps1  hotfix_bool_and_dedupe.ps1  quick_build.ps1  quick_fix_revert_includes_and_build.ps1  reconfigure.ps1  reconfigure_clean.ps1  repair_cmake.ps1  revert_best_fix.ps1  revert_includes.ps1  rotate_cube.lua  unset_nova_disable_imgui.ps1  watch_ci.ps1
assets/: assetdb.json
assets/Materials/: default_pbr.mat  default_red.mat
assets/Meshes/: sphere.gltf
assets/shaders/: pbr.frag.glsl  pbr.frag.spv  pbr.vert.glsl  pbr.vert.spv  pc_common.glsl  shadow.frag.glsl  shadow.vert.glsl  shadow.vert.spv
build_simple/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
files/src/engine/editor/: Editor.h
files/src/engine/renderer/vk/: VulkanRenderer.h
src/app/: EditorMain.cpp  SimpleMain.cpp
src/engine/ai/: Memory.cpp  Memory.h  Proposals.cpp  Proposals.h
src/engine/assets/: AssetManager.cpp  AssetManager.h  HotReload.cpp  HotReload.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  STBImageImpl.cpp  Texture.cpp  Texture.h
src/engine/assets/importers/: GLTFImporter.cpp  GLTFImporter.h
src/engine/core/: Camera.cpp  Camera.h  Light.h  LightingManager.cpp  LightingManager.h  Log.cpp  Log.h  Time.cpp  Time.h
src/engine/ecs/: Components.h  ECS.h
src/engine/editor/: AICommandPalette.cpp  AICommandPalette.h  Editor.cpp  Editor.cpp.bak  Editor.cpp.bak-20250808-093115  Editor.cpp.bak-20250808-094115  Editor.cpp.bak-20250808-110659  Editor.cpp.example.snippet.txt  Editor.h  Editor.h.bak-20250808-081306
src/engine/input/: Input.cpp  Input.h
src/engine/renderer/: IRenderer.h  OpenGLRenderer.cpp  OpenGLRenderer.h  glad.c  glad.h
src/engine/renderer/shadows/: ShadowSystem.cpp  ShadowSystem.h
src/engine/renderer/vk/: VulkanHelpers.cpp  VulkanHelpers.h  VulkanHelpers.h.bak-20250808-094115  VulkanRenderer.cpp  VulkanRenderer.cpp.bak-20250808-094115  VulkanRenderer.cpp.bak-20250808-110659  VulkanRenderer.h  VulkanRenderer.h.bak-20250808-081306  VulkanRenderer.h.bak-20250808-110659
src/engine/scripting/: LuaVM.cpp  LuaVM.h
tools/: ai_cli.py
